# TabletkiUA

./: example.py  pyproject.toml
tabletkiua/: __init__.py  _http.py  client.py  device.py  exceptions.py  main.py  models.py
