[project]
name = "tabletkiua"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = ["requests>=2.32.0"]
description = "Typed API client for app.tabletki.ua"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Your Name" }]


[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "UP", "RUF"]


[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true


[tool.pytest.ini_options]
addopts = "-q"
